# vpp-breiting

./: .gitignore
examples/: matrix.ipynb
examples/random_number/: CMakeLists.txt  main.cpp  result.txt
examples/string/: CMakeLists.txt  main.cpp  strarray.cpp  strarray.h  string.ipynb
examples/verkettete_liste/: CMakeLists.txt  main.cpp  textliste.h  textliste.ipynb
praktikum/Praktikum1/: CMakeLists.txt  P01Main.cpp  P01Test.pro  bohrung.h  fraesung.cpp  fraesung.h  komponente.cpp  komponente.h  komponentenList.cpp  komponentenList.h  p01test.h
praktikum/Praktikum1/P01Test/: gtest_dependency.pri  p01test.h
praktikum/Praktikum2/: CMakeLists.txt  IKomponente.cpp  IKomponente.h  IKomponentenElement.h  Iterator.cpp  Iterator.h  P02Main.cpp  Werkstueck.cpp  Werkstueck.h  bohrung.cpp  bohrung.h  deList.cpp  deList.h  fraesung.cpp  fraesung.h  komponente.cpp  komponente.h  p02TestMain.cpp  p02test.h
praktikum/Praktikum3/: CMakeLists.txt  IKomponente.cpp  IKomponente.h  Iterator.h  P03Main.cpp  Serializer.cpp  Serializer.h  TElement.h  Werkstueck.cpp  Werkstueck.h  bohrung.cpp  bohrung.h  deList.h  deList_impl.h  fraesung.cpp  fraesung.h  komponente.cpp  komponente.h  p02test.h  v3test.h
